--- a/LoopFollow/Info.plist
+++ b/LoopFollow/Info.plist
@@ -98,5 +98,7 @@
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+    <key>NSFaceIDUsageDescription</key>
+    <string>To authenticate before sending a bolus request</string>
 </dict>
 </plist>
