--- a/LoopFollowDisplayNameConfig.xcconfig
+++ b/LoopFollowDisplayNameConfig.xcconfig
@@ -5,7 +5,7 @@
 //
 
 // App Suffix: Used to differentiate AppGroupIdentifier between different app instances.
-app_suffix = 
+app_suffix = TCR
 
 // Custom Display Name for Your LoopFollow App
 // ---------------------------------------------
@@ -16,4 +16,4 @@ app_suffix =
 // 1. Replace 'LoopFollow' with the desired name of your app. 
 // 2. Save the file and build the app for the changes to take effect.
 //
-display_name = LoopFollow
+display_name = LoopFollow TRC
